# mcp-server-jupyter-edit

./: .gitignore  Cargo.toml  README.md  opencode.json
src/: format.rs  io.rs  lib.rs  main.rs  notebook.rs  tools.rs
