[package]
name = "mcp-server-jupyter-edit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP server for reading and editing Jupyter notebooks in LLM-friendly format"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
schemars = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "mcp-server-jupyter-edit"
path = "src/main.rs"
